--- a/style.css
+++ b/style.css
@@ -369,7 +369,36 @@ nav {
 
 
 /*===============  Akmal SECTIONS ===============*/
-
+.strategies{
+    width: 1100px;
+    height: 550px;
+}
+.strategies-text{
+    width: 75%;
+    height: 77px;
+    margin-left: 11%;
+}
+.strategies-cate{
+    width: 1050px;
+    height: 70%;
+    margin:0 auto;
+    margin-top: 3%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+}
+.strategies-list{
+    width: 248px;
+    height: px;
+    border-radius: 5px;
+}
+.circle{
+    width:6%;
+    height: 20px;
+    margin-top: 2%;
+    margin-left: 47%;
+}
 
 
 
