--- a/style.css
+++ b/style.css
@@ -348,8 +348,39 @@ nav {
 
 /*===============  Rustam SECTIONS ===============*/
 
+.container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 94px;
+}
 
+.card_2{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 30px;
+}
 
+.card_2-title{
+    width: 490px;
+}
+
+.card_2-title h2{
+    font-size: 32px;
+    color: var(--title-color);
+}
+
+.card_2-title.up{
+    font-weight: var(--font-semi-bold);
+}
+
+.card_2-icon{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
 
 
 
