--- a/style.css
+++ b/style.css
@@ -555,7 +555,265 @@ line-height: 26px; /* 162.5% */
 
 
 /*===============  MIKE SECTIONS ===============*/
+.price-table{
+    width: 100%;
+    height: 600px;
+}
+.section-price{
+    width: 100%;
+    height: 150px;
+}
+.section-list-1{
+    font-family: Poppins;
+font-size: 34px;
+font-weight: 700;
+line-height: 51px;
+letter-spacing: 0px;
+text-align: center;
 
+}
+.section-list-2{
+    font-family: Poppins;
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0px;
+
+color: rgba(34, 52, 61, 1);
+text-align: center;
+position: relative;
+}
+.price-table-boxes{
+    width: 100%;
+    height: 448px;
+}
+.boxes-par{
+    padding-left: 150px;
+    gap: 50px;
+    display: flex;
+}
+.box-1{
+    border-radius: 20px;
+    width: 26%;
+    height: 400px;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.25);
+
+}
+.box-2{
+    border-radius: 20px;
+    background: rgba(2, 137, 122, 1);
+    width: 26%;
+    height: 400px;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.25);
+
+}
+.box-3{
+    border-radius: 20px;
+    width: 26%;
+    height: 400px;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.25);
+
+}
+.box-list{
+    
+    text-align: center;
+    
+
+}
+.category{
+
+    font-family: Poppins;
+font-size: 24px;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: 0px;
+
+
+}
+.brief{
+    position: relative;
+   
+    text-align: center;
+    font-family: Poppins;
+font-size: 16px;
+font-weight: 400;
+line-height: 40px;
+letter-spacing: 0px;
+
+}
+.num{
+position: relative;
+bottom: 20px;
+right: 50px;
+color: rgba(2, 137, 122, 1);
+font-family: Poppins;
+font-size: 76px;
+font-weight: 700;
+line-height: 100px;
+letter-spacing: 0.20000000298023224px;
+text-align: center;
+}
+.dollar{
+    position: relative;
+    bottom: 90px;
+    right: 20px;
+font-family: Inter;
+font-size: 24px;
+font-weight: 700;
+line-height: 30px;
+letter-spacing: 0.10000000149011612px;
+
+}
+.per{
+    font-family: Poppins;
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+letter-spacing: 0.10000000149011612px;
+position: relative;
+bottom: 93px;
+left: 20px;
+color: rgba(175, 175, 175, 1);
+}
+.operators{
+    position: relative;
+    bottom: 70px;
+font-family: Inter;
+font-size: 16px;
+font-weight: 500;
+line-height: 22px;
+letter-spacing: 0.20000000298023224px;
+
+}
+.btn-green{
+    position: relative;
+    bottom: 30px ;
+    left: 55px;
+    width: 150px;
+    height: 50px;
+    background-color: rgba(2, 137, 122, 1);
+    border-radius: 15px;
+    text-align: center;
+
+}
+.btn-green p{
+    color: white;
+    font-family: Montserrat;
+font-size: 18px;
+font-weight: 600;
+line-height: 22px;
+letter-spacing: 0em;
+position: relative;
+top: 13px;
+
+}
+.box-list{
+    
+    text-align: center;
+    
+
+}
+.category-2{
+color: white;
+    font-family: Poppins;
+font-size: 24px;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: 0px;
+
+
+}
+.brief-2{
+    color: white;
+    position: relative;
+    text-align: center;
+    font-family: Poppins;
+font-size: 16px;
+font-weight: 400;
+line-height: 40px;
+letter-spacing: 0px;
+
+}
+.num-2{
+position: relative;
+bottom: 20px;
+right: 50px;
+color: white;
+font-family: Poppins;
+font-size: 76px;
+font-weight: 700;
+line-height: 100px;
+letter-spacing: 0.20000000298023224px;
+text-align: center;
+}
+.dollar-2{
+    color: white;
+    position: relative;
+    bottom: 90px;
+    right: 20px;
+font-family: Inter;
+font-size: 24px;
+font-weight: 700;
+line-height: 30px;
+letter-spacing: 0.10000000149011612px;
+
+}
+.per-2{
+    font-family: Poppins;
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+letter-spacing: 0.10000000149011612px;
+position: relative;
+bottom: 93px;
+left: 20px;
+color: rgba(175, 175, 175, 1);
+}
+.operators-2{
+    
+    position: relative;
+    bottom: 70px;
+font-family: Inter;
+font-size: 16px;
+font-weight: 500;
+line-height: 22px;
+letter-spacing: 0.20000000298023224px;
+
+}
+.btn-green-2{
+    position: relative;
+    bottom: 30px ;
+    left:50px;
+    width: 150px;
+    height: 50px;
+    background-color: white;
+    border-radius: 15px;
+    text-align: center;
+
+}
+.btn-green-2 p{
+    color: rgba(2, 137, 122, 1) ;
+    font-family: Montserrat;
+font-size: 18px;
+font-weight: 600;
+line-height: 22px;
+letter-spacing: 0em;
+position: relative;
+top: 13px;
+
+}
+.num-3{
+    position: relative;
+    right: 70px;
+    bottom: 20px;
+    color: rgba(2, 137, 122, 1);
+    font-family: Poppins;
+    font-size: 76px;
+    font-weight: 700;
+    line-height: 100px;
+    letter-spacing: 0.20000000298023224px;
+    text-align: center; 
+}
 
 
 
